Search bar overflow fixed #2

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11815,10 +11815,9 @@ input.form-control.newsletter-email {
 .wrapper-header {
   overflow: visible !important;
 }
-.home-slider {
-  z-index: -1;
-}
-.sticky-nav-wrapper {
+.home-slider,
+.sticky-nav-wrapper,
+.header-divider {
   z-index: -1;
 }
 .nsearchinput-pl.well {
