--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -2471,11 +2471,7 @@ input.form-control.newsletter-email {
     overflow: visible !important;
 }
 
-.home-slider {
-	z-index: -1;
-}
-
-.sticky-nav-wrapper {
+.home-slider, .sticky-nav-wrapper, .header-divider {
 	z-index: -1;
 }
 
